--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -45,16 +45,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JsonObjects\Input\JsonObjectReaderTests.cs" />
-    <Compile Include="JsonObjects\Output\JsonObjectBuilderTests.cs" />
     <Compile Include="JsonObjects\Output\JsonObjectWriterTests.cs" />
     <Compile Include="Json\Input\JsonReaderTests.cs" />
     <Compile Include="Json\Input\ScannerTests.cs" />
-    <Compile Include="Json\Output\JsonStringBuilderTests.cs" />
     <Compile Include="Json\Output\JsonStringWriterTests.cs" />
     <Compile Include="Objects\Input\ObjectReaderTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderStructTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderClassTests.cs" />
-    <Compile Include="Objects\Output\TypedObjectBuilderTests.cs" />
+    <Compile Include="Objects\Output\ObjectWriterTests.cs" />
     <Compile Include="Objects\Output\TypedObjectConstructorOnlyObjectTests.cs" />
     <Compile Include="Objects\TypeDefinitionTests.cs" />
     <Compile Include="Output\TestOutputs.cs" />
