--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -49,6 +49,9 @@
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JsonObjects\Input\JsonObjectReaderTests.cs" />
@@ -63,6 +66,8 @@
     <Compile Include="Objects\Output\ObjectWriterTests.cs" />
     <Compile Include="Objects\TypeDefinitionTests.cs" />
     <Compile Include="Output\SameReferenceTwice.cs" />
+    <Compile Include="Performance\DataContext.cs" />
+    <Compile Include="Performance\PerformanceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionTesting.cs" />
     <Compile Include="EasyAssertions.cs" />
@@ -75,6 +80,9 @@
       <Project>{11E6558C-B8CF-495E-811C-0BD656FEB3C4}</Project>
       <Name>json</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Performance\northwind.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
