Better exception message when exception occurs while building objects.

--- a/Serializer/json.csproj
+++ b/Serializer/json.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Objects\Output\ObjectWriterWithPreBuilding.cs" />
     <Compile Include="Objects\Output\PreBuildingWriter.cs" />
     <Compile Include="Objects\Output\StructurerReference.cs" />
+    <Compile Include="Objects\Output\WriteException.cs" />
     <Compile Include="Objects\ParameterDefinition.cs" />
     <Compile Include="Objects\PropertyDefinitionBuilder.cs" />
     <Compile Include="Objects\ReflectionInterfaceProvider.cs" />
