--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Json\Input\JsonReaderTests.cs" />
     <Compile Include="Json\Output\JsonStringWriterTests.cs" />
     <Compile Include="Json\Output\PrettyPrintingJsonStringWriterTests.cs" />
+    <Compile Include="Objects\Attributes\AttributeTests.cs" />
     <Compile Include="Objects\Input\ObjectReaderTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderStructTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderClassTests.cs" />
