Added public extension methods for simpler API.

--- a/Serializer/json.csproj
+++ b/Serializer/json.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Json\Input\JsonReader.cs" />
     <Compile Include="Json\Input\ParseException.cs" />
     <Compile Include="StateStack.cs" />
+    <Compile Include="Transform.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
