--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JsonObjects\Input\JsonObjectReaderTests.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionTesting.cs" />
     <Compile Include="EasyAssertions.cs" />
+    <Compile Include="TransformTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
