--- a/PerformanceTests/PerformanceTests.csproj
+++ b/PerformanceTests/PerformanceTests.csproj
@@ -8,9 +8,9 @@
     <ProjectGuid>{D31B3257-0836-465D-A424-818F6CE24705}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>json.PerformanceTests</RootNamespace>
+    <RootNamespace>ForSerial.PerformanceTests</RootNamespace>
     <AssemblyName>PerformanceTests</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>&lt;Project Location In Database&gt;</SccProjectName>
     <SccLocalPath>&lt;Local Binding Root of Project&gt;</SccLocalPath>
@@ -45,8 +45,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -61,9 +59,9 @@
     <EmbeddedResource Include="Data\northwind.json" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Serializer\json.csproj">
+    <ProjectReference Include="..\Serializer\ForSerial.csproj">
       <Project>{11E6558C-B8CF-495E-811C-0BD656FEB3C4}</Project>
-      <Name>json</Name>
+      <Name>ForSerial</Name>
     </ProjectReference>
     <ProjectReference Include="..\Tests\Tests.csproj">
       <Project>{88A35D84-0BFB-4144-AA77-3C5086D8214A}</Project>
