--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Json\Output\JsonStringWriterTests.cs" />
     <Compile Include="Json\Output\PrettyPrintingJsonStringWriterTests.cs" />
     <Compile Include="Objects\Attributes\AttributeTests.cs" />
+    <Compile Include="Objects\Attributes\IgnoreAttributeTests.cs" />
+    <Compile Include="Objects\Attributes\JsonNameAttributeTests.cs" />
     <Compile Include="Objects\Input\ObjectReaderTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderStructTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderClassTests.cs" />
