--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Objects\Output\DynamicMethodProviderStructTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderClassTests.cs" />
     <Compile Include="Objects\Output\ObjectWriterTests.cs" />
+    <Compile Include="Objects\PropertyDefinitionBuilderTests.cs" />
     <Compile Include="Output\SameReferenceTwice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionTesting.cs" />
