--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Objects\Attributes\AttributeTests.cs" />
     <Compile Include="Objects\Attributes\IgnoreAttributeTests.cs" />
     <Compile Include="Objects\Attributes\JsonNameAttributeTests.cs" />
+    <Compile Include="Objects\DefaultPropertyDefinitionTests.cs" />
     <Compile Include="Objects\Input\ObjectReaderTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderStructTests.cs" />
     <Compile Include="Objects\Output\DynamicMethodProviderClassTests.cs" />
