--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EasyAssertions" version="0.2.0" />
   <package id="NSubstitute" version="1.3.0.0" />
   <package id="NUnit" version="2.5.10.11092" />
 </packages>
