--- a/Serializer/ForSerial.csproj
+++ b/Serializer/ForSerial.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Objects\Attributes\IgnoreAttribute.cs" />
     <Compile Include="Objects\Attributes\JsonNameAttribute.cs" />
     <Compile Include="Objects\ConstructorDefinition.cs" />
+    <Compile Include="Objects\Input\ReferenceEqualityComparer.cs" />
     <Compile Include="Objects\SerializationScenario.cs" />
     <Compile Include="Objects\TypeCache.cs" />
     <Compile Include="Objects\DynamicMethodProvider.cs" />
